--- a/HW2/Practical/adversarial_training.ipynb
+++ b/HW2/Practical/adversarial_training.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rallm/IUST-DL-Fall2025/blob/main/HW2/Practical/adversarial_training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "28fd50c5-97d1-4019-92b7-bd5c5a8bcf26",
       "metadata": {
         "id": "28fd50c5-97d1-4019-92b7-bd5c5a8bcf26"
@@ -53,12 +63,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "b3cb28b3-3f63-4efa-899f-36a10e3702c8",
       "metadata": {
-        "id": "b3cb28b3-3f63-4efa-899f-36a10e3702c8"
+        "id": "b3cb28b3-3f63-4efa-899f-36a10e3702c8",
+        "outputId": "9c06e7af-ea82-47f8-c144-6a47a15148d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 182M/182M [00:17<00:00, 10.5MB/s]\n",
+            "100%|██████████| 64.3M/64.3M [00:11<00:00, 5.52MB/s]\n"
+          ]
+        }
+      ],
       "source": [
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
@@ -68,13 +91,13 @@
         "transform_train = transforms.Compose([\n",
         "    transforms.RandomCrop(32, padding=4),\n",
         "    # Hint: Add a common augmentation technique that flips images horizontally at random.\n",
-        "    #TODO,\n",
+        "    transforms.RandomHorizontalFlip(),\n",
         "    transforms.RandomRotation(15),\n",
         "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
         "    transforms.ToTensor(),\n",
         "    # Hint: Normalize the tensor images. A common practice is to use a mean and standard deviation of 0.5 for each of the three channels.\n",
         "    # This transform expects two tuples: (mean_R, mean_G, mean_B) and (std_R, std_G, std_B).\n",
-        "    #TODO\n",
+        "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
         "])\n",
         "\n",
         "# Define Test Data Augmentation\n",
@@ -87,7 +110,7 @@
         "trainset = torchvision.datasets.SVHN(root='./data', split='train', download=True, transform=transform_train)\n",
         "\n",
         "# Hint: Create a data loader for the training set. Use a batch size of 128 and make sure to shuffle the data.\n",
-        "trainloader = #TODO\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=128, shuffle=True)\n",
         "\n",
         "testset = torchvision.datasets.SVHN(root='./data', split='test', download=True, transform=transform_test)\n",
         "testloader = torch.utils.data.DataLoader(testset, batch_size=100, shuffle=False, num_workers=2)"
@@ -95,12 +118,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "a7339610-84a4-4514-834e-5af61f868a68",
       "metadata": {
-        "id": "a7339610-84a4-4514-834e-5af61f868a68"
+        "id": "a7339610-84a4-4514-834e-5af61f868a68",
+        "outputId": "491c1ee9-e44f-4ac2-adee-486e5a71cc38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using device: cuda\n"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -108,14 +143,18 @@
         "\n",
         "# Check for GPU availability and set the device\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(f\"Using device: {device}\")\n",
-        "\n",
+        "print(f\"Using device: {device}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Updated Data Augmentation\n",
         "transform_train = transforms.Compose([\n",
         "    transforms.RandomCrop(32, padding=4),\n",
         "    transforms.RandomHorizontalFlip(),\n",
         "    # Hint: Set the maximum degrees for the random rotation. A value like 15 is a good start.\n",
-        "    transforms.RandomRotation(#TODO),\n",
+        "    transforms.RandomRotation(15),\n",
         "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
@@ -162,25 +201,58 @@
         "            # Hint: Implement the standard training steps in order:\n",
         "            # zero gradients, forward pass, calculate loss, backward pass, and update weights.\n",
         "            # Then, add the batch loss to the 'running_loss'.\n",
-        "            #TODO\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "            running_loss += loss.item()\n",
         "\n",
         "            # Hint: After the optimizer step, update the scheduler as well.\n",
-        "            #TODO\n",
+        "            scheduler.step()\n",
         "\n",
-        "        print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {running_loss / len(trainloader):.4f}\")\n",
-        "\n",
+        "        print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {running_loss / len(trainloader):.4f}\")"
+      ],
+      "metadata": {
+        "id": "nyLL9wacb3xW"
+      },
+      "id": "nyLL9wacb3xW",
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Main Execution\n",
         "model = ImprovedCNN().to(device)\n",
         "\n",
-        "criterion = #TODO\n",
+        "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9, weight_decay=5e-4)\n",
         "# Hint: Use a scheduler that multiplies the learning rate by a 'gamma' factor every 'step_size' epochs.\n",
         "# For example, reduce the LR by a factor of 0.1 every 10 epochs.\n",
-        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, #TODO)\n",
+        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.1)\n",
         "\n",
-        "train_model_with_scheduler(model, trainloader, criterion, optimizer, scheduler, num_epochs=20)\n",
-        "\n",
-        "\n"
+        "train_model_with_scheduler(model, trainloader, criterion, optimizer, scheduler, num_epochs=20)"
+      ],
+      "metadata": {
+        "id": "Q9DZ7mlubwlh",
+        "outputId": "4799b5be-d260-45df-b9b1-3c29607a81c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Q9DZ7mlubwlh",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20, Loss: 2.2524\n",
+            "Epoch 2/20, Loss: 2.2528\n",
+            "Epoch 3/20, Loss: 2.2528\n"
+          ]
+        }
       ]
     },
     {
@@ -203,13 +275,13 @@
         "    total = 0\n",
         "\n",
         "    # Hint: Use a torch context manager to disable gradient calculations for efficiency.\n",
-        "    with #TODO:\n",
+        "    with torch.no_grad():\n",
         "        for inputs, labels in testloader:\n",
         "            inputs, labels = inputs.to(device), labels.to(device)\n",
         "            outputs = model(inputs)\n",
         "\n",
         "            # Hint: From the raw 'outputs', find the index of the maximum value along dimension 1 to get the predicted labels.\n",
-        "            _, preds = #TODO\n",
+        "            _, preds = torch.max(outputs.data, 1)\n",
         "\n",
         "            all_preds.extend(preds.cpu().numpy())\n",
         "            all_labels.extend(labels.cpu().numpy())\n",
@@ -218,14 +290,14 @@
         "            total += labels.size(0)\n",
         "\n",
         "            # Hint: Count how many predictions match the true labels in this batch and add the number to the 'correct' variable.\n",
-        "            correct += #TODO\n",
+        "            correct += (preds == labels).sum().item()\n",
         "\n",
         "            # Collect incorrect predictions\n",
         "            # Hint: Create a boolean mask to identify which predictions were incorrect.\n",
-        "            mismatches = #TODO\n",
+        "            mismatches = (preds != labels)\n",
         "\n",
         "            # Hint: Use the 'mismatches' mask to select and store the input images that were misclassified.\n",
-        "            incorrect_samples.extend(#TODO)\n",
+        "            incorrect_samples.extend(inputs[mismatches])\n",
         "            incorrect_true_labels.extend(labels[mismatches].cpu().numpy())\n",
         "            incorrect_pred_labels.extend(preds[mismatches].cpu().numpy())\n",
         "\n",
@@ -233,8 +305,12 @@
         "    accuracy = 100 * correct / total\n",
         "    print(f\"Accuracy on the test set: {accuracy:.2f}%\")\n",
         "\n",
-        "    return all_preds, all_labels, (incorrect_samples, incorrect_true_labels, incorrect_pred_labels)\n",
-        "\n",
+        "    return all_preds, all_labels, (incorrect_samples, incorrect_true_labels, incorrect_pred_labels)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -248,9 +324,18 @@
         "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=np.arange(10))  # Assuming 10 classes\n",
         "    disp.plot(cmap=plt.cm.Blues)\n",
         "    plt.title(\"Confusion Matrix\")\n",
-        "    plt.show()\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "pXRdWIyXcngH"
+      },
+      "id": "pXRdWIyXcngH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def visualize_incorrect_samples(incorrect_samples, true_labels, pred_labels, num_samples=10):\n",
@@ -282,13 +367,18 @@
         "        plt.axis('off')\n",
         "\n",
         "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n"
-      ]
+        "    plt.show()\n"
+      ],
+      "metadata": {
+        "id": "FJUriWp5ctDn"
+      },
+      "id": "FJUriWp5ctDn",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5ea85484-defd-4b17-8009-18063847eb5b",
       "metadata": {
         "id": "5ea85484-defd-4b17-8009-18063847eb5b"
@@ -322,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "52786544-c714-4df2-9fdb-1a3b6b161875",
       "metadata": {
         "id": "52786544-c714-4df2-9fdb-1a3b6b161875"
@@ -576,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "a1490760-021d-490d-9b67-3054c762a313",
       "metadata": {
         "id": "a1490760-021d-490d-9b67-3054c762a313"
@@ -747,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "298b4a95-7fcd-4a92-8928-901416bd704e",
       "metadata": {
         "id": "298b4a95-7fcd-4a92-8928-901416bd704e"
@@ -764,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "48545f3c-44a7-4b89-a928-7afff988b078",
       "metadata": {
         "id": "48545f3c-44a7-4b89-a928-7afff988b078"
@@ -778,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b1ada354-558c-4321-aa7e-b3f12fc3774a",
       "metadata": {
         "id": "b1ada354-558c-4321-aa7e-b3f12fc3774a"
@@ -870,8 +960,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "azureml_py38_PT_and_TF",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -887,8 +976,11 @@
       "version": "3.10.13"
     },
     "colab": {
-      "provenance": []
-    }
+      "provenance": [],
+      "gpuType": "T4",
+      "include_colab_link": true
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
